Улучшение вызова процесса